--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ twitter_username: cga
 github_username:  bruh
 
 # Build settings
-theme: jekyll-theme-yat
+remote_theme: "jeffreytse/jekyll-theme-yat"
 plugins:
   - jekyll-feed
 
